# vos-studio-bff

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  tool_policy.py
docs/adr/: 0001-use-dedicated-bff-for-internal-console.md  0002-keep-browser-sessions-and-mcp-credentials-separated.md  0003-expose-ui-oriented-rest-endpoints.md  0004-use-explicit-vos-tool-policy-and-rbac.md  0005-require-preview-and-confirmation-for-paid-or-external-actions.md  0006-persist-audit-events-for-sensitive-operations.md  0007-choose-authentication-provider-and-role-source.md  0008-define-deployment-cors-and-cookie-boundary.md  0009-define-bff-to-mcp-communication-contract.md  0010-enforce-client-data-isolation-in-bff-responses.md  0011-define-observability-and-operational-health-model.md  0012-reuse-github-unified-mcp-bff-as-implementation-baseline.md  0013-define-frontend-error-envelope-and-api-contract-versioning.md  0014-require-tests-and-ci-before-implementation-merges.md  0015-validate-runtime-configuration-and-secret-handling.md  README.md
tests/: test_app.py  test_config.py  test_tool_policy.py
